[gd_scene load_steps=4 format=3 uid="uid://bqadd3sorfe21"]

[ext_resource type="Script" path="res://hidingSpot.gd" id="1_krj1b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8swy"]
size = Vector2(210, 139)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1x4a5"]
size = Vector2(40, 40)

[node name="HidingSpot" type="StaticBody2D" groups=["hiding_spots"]]
script = ExtResource("1_krj1b")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_w8swy")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.160784, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1x4a5")

[node name="hideLabel" type="RichTextLabel" parent="."]
visible = false
offset_top = -1.0
offset_right = 143.0
offset_bottom = 18.0
text = "Press 'E' to Hide!"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 1000.0

[node name="timeBar" type="ProgressBar" parent="."]
visible = false
offset_left = -20.0
offset_top = 14.0
offset_right = 180.0
offset_bottom = 41.0
scale = Vector2(0.2, 0.2)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
